clean up layout and landing page

--- a/app/public/locales/en-US/common.json
+++ b/app/public/locales/en-US/common.json
@@ -6,7 +6,7 @@
     "title": "Site title"
   },
   "Footer": {
-    "agency_name": "Agency name",
+    "agency_name": "VA.gov",
     "return_to_top": "Return to top"
   },
   "Layout": {
